// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipeForm component renders as expected 1`] = `
<KeyboardAvoidingView
  style={
    Object {
      "backgroundColor": "#EFEFF4",
      "flex": 1,
    }
  }
  testID="addRecipeFormScreen"
>
  <ScrollViewMock>
    <TableView>
      <Field
        component={[Function]}
        name="image"
      />
      <Section
        allowFontScaling={true}
        footer={null}
        footerComponent={
          <ErrorsSectionFooter
            errors={
              Object {
                "description": "description error",
                "name": "error",
              }
            }
            testIDcontext="base"
          />
        }
        footerTextColor="#6d6d72"
        header={null}
        headerComponent={null}
        headerTextColor="#6D6D72"
        hideSeparator={false}
        sectionPaddingBottom={15}
        sectionPaddingTop={0}
        sectionTintColor="#EFEFF4"
        separatorInsetLeft={15}
        separatorInsetRight={0}
        separatorTintColor="#C8C7CC"
      >
        <TextInputCell
          name="name"
          placeholder="Name"
        />
        <TextInputCell
          name="description"
          numberOfLines={4}
          placeholder="Description"
        />
      </Section>
      <FieldArray
        component={[Function]}
        fieldComponent={[Function]}
        header="Ingredients"
        name="ingredients"
        testIDcontext="ingredients"
      />
      <FieldArray
        component={[Function]}
        fieldComponent={[Function]}
        header="Seasonings"
        name="seasonings"
        placeholder="Seasoning"
        testIDcontext="seasonings"
      />
      <FieldArray
        component={[Function]}
        fieldComponent={[Function]}
        header="Steps"
        name="steps"
        placeholder="Step"
        testIDcontext="steps"
      />
    </TableView>
  </ScrollViewMock>
</KeyboardAvoidingView>
`;

exports[`AddRecipeForm component renders as expected 2`] = `
Array [
  Array [
    Object {
      "leftButtons": Array [
        Object {
          "buttonColor": "#ffff",
          "id": "cancel",
          "testID": "cancel",
          "title": "Cancel",
        },
      ],
      "rightButtons": Array [
        Object {
          "buttonColor": "#ffff",
          "disabled": true,
          "id": "add",
          "testID": "add",
          "title": "Add",
        },
      ],
    },
  ],
]
`;

exports[`AddRecipeForm component renders valid form as expected 1`] = `
<KeyboardAvoidingView
  style={
    Object {
      "backgroundColor": "#EFEFF4",
      "flex": 1,
    }
  }
  testID="addRecipeFormScreen"
>
  <ScrollViewMock>
    <TableView>
      <Field
        component={[Function]}
        name="image"
      />
      <Section
        allowFontScaling={true}
        footer={null}
        footerComponent={
          <ErrorsSectionFooter
            errors={
              Object {
                "description": undefined,
                "name": undefined,
              }
            }
            testIDcontext="base"
          />
        }
        footerTextColor="#6d6d72"
        header={null}
        headerComponent={null}
        headerTextColor="#6D6D72"
        hideSeparator={false}
        sectionPaddingBottom={15}
        sectionPaddingTop={0}
        sectionTintColor="#EFEFF4"
        separatorInsetLeft={15}
        separatorInsetRight={0}
        separatorTintColor="#C8C7CC"
      >
        <TextInputCell
          name="name"
          placeholder="Name"
        />
        <TextInputCell
          name="description"
          numberOfLines={4}
          placeholder="Description"
        />
      </Section>
      <FieldArray
        component={[Function]}
        fieldComponent={[Function]}
        header="Ingredients"
        name="ingredients"
        testIDcontext="ingredients"
      />
      <FieldArray
        component={[Function]}
        fieldComponent={[Function]}
        header="Seasonings"
        name="seasonings"
        placeholder="Seasoning"
        testIDcontext="seasonings"
      />
      <FieldArray
        component={[Function]}
        fieldComponent={[Function]}
        header="Steps"
        name="steps"
        placeholder="Step"
        testIDcontext="steps"
      />
    </TableView>
  </ScrollViewMock>
</KeyboardAvoidingView>
`;

exports[`AddRecipeForm component renders valid form as expected 2`] = `
Array [
  Array [
    Object {
      "leftButtons": Array [
        Object {
          "buttonColor": "#ffff",
          "id": "cancel",
          "testID": "cancel",
          "title": "Cancel",
        },
      ],
      "rightButtons": Array [
        Object {
          "buttonColor": "#ffff",
          "disabled": false,
          "id": "add",
          "testID": "add",
          "title": "Add",
        },
      ],
    },
  ],
]
`;
